--- a/flexget/sorting.yml
+++ b/flexget/sorting.yml
@@ -29,7 +29,7 @@ tasks:
   Sort_Unpacked_TV_Shows:
     # Where to get the unpacked (staged) files from
     find:
-      path: '/raid/videos/staging/tv_shows/'
+      path: '/media/data/mythtv/videos/unrar/staging/tv_shows/'
     # Where to get the metadata
     thetvdb_lookup: yes
     # This is needed to get my season offset values
@@ -37,7 +37,6 @@ tasks:
       - series-favorite.yml
       - series-following.yml
       - series-daily.yml
-      - series-ak.yml
     all_series:
       # Don't actually filter
       parse_only: yes
@@ -46,10 +45,10 @@ tasks:
     move:
       # Folder to move to
       to: >
-        /raid/videos/TV Shows/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
+        /media/data/mythtv/videos/TV/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ (tvdb_season|default(series_season))|pad(2) }}/{% endif %}
       # Filename (inside of folder) to move to
       filename: >
-        {{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }} - {{ series_id }}{% if tvdb_ep_name|default(False) %} - {{ tvdb_ep_name|replace('/', '_')|replace(':', ' -') }}{% endif %} - {{ quality }}.{{ location[-3:] }}
+        {{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }} - {% if series_id_type == 'ep' and thetvdb_lookup_season_offset|default(False) %}{{ "S%0.2dE%0.2d"|format((series_season + thetvdb_lookup_season_offset),series_episode) }}{% else %}{{ series_id }}{% endif %}{% if ep_name|default(False) %} - {{ ep_name|replace('/', '_')|replace(':', ' -') }}{% endif %} - {{ quality }}
       clean_source: 40
     if:
       - movedone:
@@ -59,7 +58,7 @@ tasks:
   Sort_Unpacked_TV_Premieres:
     # Where to get the unpacked (staged) files from
     find:
-      path: '/raid/videos/staging/tv_premieres/'
+      path: '/media/data/mythtv/videos/unrar/staging/tv_premieres/'
     # Where to get the metadata
     thetvdb_lookup: yes
     all_series:
@@ -78,24 +77,27 @@ tasks:
     move:
       # Folder to move to
       to: >
-        /raid/videos/TV Premieres/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
+        /media/data/mythtv/videos/premieres/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ (tvdb_season|default(series_season))|pad(2) }}/{% endif %}
       # Filename (inside of folder) to move to
       filename: >
-        {{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }} - {{ series_id }}{% if tvdb_ep_name|default(False) %} - {{ tvdb_ep_name|replace('/', '_')|replace(':', ' -') }}{% endif %} - {{ quality }}.{{ location[-3:] }}
+        {{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }} - {% if series_id_type == 'ep' and thetvdb_lookup_season_offset|default(False) %}{{ "S%0.2dE%0.2d"|format((series_season + thetvdb_lookup_season_offset),series_episode) }}{% else %}{{ series_id }}{% endif %}{% if ep_name|default(False) %} - {{ ep_name|replace('/', '_')|replace(':', ' -') }}{% endif %} - {{ quality }}
       clean_source: 40
 
   # Same as above
   Sort_Unpacked_Movies:
     find:
-      path: '/raid/videos/staging/movies/'
+      path: '/media/data/mythtv/videos/unrar/staging/movies/'
     imdb_lookup: yes
     tmdb_lookup: yes
-    #rottentomatoes_lookup: yes
+    # Rotten Tomatoes is broken, possibly forever :(
+    #rottentomatoes_lookup: '{{ secrets.rottentomatoes.api_key }}'
     proper_movies: yes
     require_field: [movie_name, movie_year]
     move:
       to: >
-        /raid/videos/Movies/{{ movie_name|replace('/', '_')|replace(':', ' -') }} ({{ movie_year }})/
+        "/media/data2/mythtv/videos/movies/_Movies/{{ imdb_name|replace('/', '_')|replace(':', ' -') }} ({{ imdb_year }})"
       filename: >
-        {{ movie_name|replace('/', '_')|replace(':', ' -') }} ({{ movie_year }}) - {{ quality }}.{{ location[-3:] }}
+        {{ imdb_name|replace('/', '_')|replace(':', ' -') }} ({{ imdb_year }}) - {{ quality }}
       clean_source: 1000
+      along:
+        - srt
