--- a/flexget/config.yml
+++ b/flexget/config.yml
@@ -37,7 +37,7 @@ templates:
     # Make there's 50GB free before adding more downloads
     free_space:
       path: /media/data
-      space: 50000
+      space: 50
     # Make sure all filenames are Windows safe (for samba)
     pathscrub: windows
     make_rss:
@@ -183,8 +183,8 @@ templates:
 
   tv-shows-find:
     discover:
-      no_entries_ok: yes
-      what: [filler: yes]
+      #no_entries_ok: yes
+      what: [filler: yes] # Always produce entries
       from:
         - torrentleech:
             rss_key: '{{ secrets.torrentleech.rss_key }}'
@@ -412,7 +412,9 @@ tasks:
   # accepted, then the original file is deleted
 #  Google-Music-Sync:
 #    priority: 3
-#    disable: [seen, seen_info_hash]
+#    disable:
+#      - seen
+#      - seen_info_hash
 #    template: no_global # None of the global templates make sense here
 #    find:
 #      path: '/home/backend/Dropbox/Media/Music'
@@ -477,9 +479,10 @@ tasks:
 
   My-TV-Shows-Find-Next-Favorite:
     template: [tv-global, tv-shows-find]
-    disable: inputs
+    disable:
+      - inputs
     discover:
-      no_entries_ok: yes
+      #no_entries_ok: yes
       interval: 2 hours
       what:
         - trakt_emit:
@@ -488,8 +491,8 @@ tasks:
             context: collected
             position: next
             list: Favorite TV
-            aired_only:
-              timeframe: 3 days
+            #aired_only:
+            #  timeframe: 1 day
       from: [filler: yes]
     include: [ series-favorite.yml ]
     all_series:
@@ -501,9 +504,10 @@ tasks:
 
   My-TV-Shows-Find-Next-Following:
     template: [tv-global, tv-shows-find]
-    disable: inputs
+    disable:
+      - inputs
     discover:
-      no_entries_ok: yes
+      #no_entries_ok: yes
       interval: 2 hours
       what:
         - trakt_emit:
@@ -525,9 +529,10 @@ tasks:
 
   My-TV-Shows-Find-Next-Daily:
     template: [tv-global, tv-shows-find]
-    disable_plugin: inputs
+    disable:
+      - inputs
     discover:
-      no_entries_ok: yes
+      #no_entries_ok: yes
       interval: 2 hours
       what:
         - trakt_emit:
@@ -550,7 +555,8 @@ tasks:
     template:
       - tv-global
       - tv-shows-find
-    disable: inputs
+    disable:
+      - inputs
     discover:
       what:
         - emit_series:
@@ -629,8 +635,9 @@ tasks:
       - tvdb_first_air_date and tvdb_first_air_date < now - timedelta(days=60): reject
     # Accept all series permieres
     series_premiere:
-      timeframe: 1 days
-      quality: 720p+ hdtv+
+      timeframe: 3 days
+      target: 720p+ hdtv+
+      quality: webrip+
     # Add to deluge, but don't queue to top (My-TV-Shows are more important)
     # and put in a different location
     set:
