--- a/flexget/sorting.yml
+++ b/flexget/sorting.yml
@@ -17,11 +17,12 @@ templates:
     accept_all: yes
     # Make sure all filenames are Windows safe (for samba)
     pathscrub: windows
-    find:
+    filesystem:
       path: '/tmp'
       # We are looking for any video files that were extracted
-      regexp: '.*\.(avi|mkv|mpg|mp4|m4v)$'
       recursive: yes
+      retrieve: files
+      regexp: '.*\.(avi|mkv|mpg|mp4|m4v)$'
     regexp:
       reject:
         - \bsample\b: {from: title}
@@ -31,8 +32,9 @@ templates:
 tasks:
   Sort_Unpacked_TV_Shows:
     # Where to get the unpacked (staged) files from
-    find:
+    filesystem:
       path: '/media/data/mythtv/videos/unrar/staging/tv_shows/'
+      retrieve: files
     thexem:
       source: scene
       destination: tvdb
@@ -43,6 +45,7 @@ tasks:
       - series-favorite.yml
       - series-following.yml
       - series-daily.yml
+      - series-ak.yml
     sequence:
       - configure_series:
           settings:
@@ -50,7 +53,7 @@ tasks:
           from:
             trakt_list:
               username: '{{ secrets.trakt.username }}'
-              password: '{{ secrets.trakt.password }}'
+              account: '{{ secrets.trakt.account }}'
               list: Favorite TV
               type: shows
               strip_dates: yes
@@ -60,7 +63,7 @@ tasks:
           from:
             trakt_list:
               username: '{{ secrets.trakt.username }}'
-              password: '{{ secrets.trakt.password }}'
+              account: '{{ secrets.trakt.account }}'
               list: Following TV
               type: shows
               strip_dates: yes
@@ -70,8 +73,18 @@ tasks:
           from:
             trakt_list:
               username: '{{ secrets.trakt.username }}'
-              password: '{{ secrets.trakt.password }}'
+              account: '{{ secrets.trakt.account }}'
               list: Daily TV
+              type: shows
+              strip_dates: yes
+      - configure_series:
+          settings:
+            tracking: no
+          from:
+            trakt_list:
+              username: '{{ secrets.trakt.username }}'
+              account: '{{ secrets.trakt.account }}'
+              list: AK TV
               type: shows
               strip_dates: yes
     all_series:
@@ -94,10 +107,17 @@ tasks:
 
   Sort_Unpacked_TV_Premieres:
     # Where to get the unpacked (staged) files from
-    find:
+    filesystem:
       path: '/media/data/mythtv/videos/unrar/staging/tv_premieres/'
+      retrieve: files
     # Where to get the metadata
     thetvdb_lookup: yes
+    configure_series:
+      from:
+        filesystem:
+          path: "/media/data/mythtv/videos/premieres/"
+          recursive: no
+          retrieve: dirs
     all_series:
       # Don't actually filter
       parse_only: yes
@@ -122,8 +142,9 @@ tasks:
 
   # Same as above
   Sort_Unpacked_Movies:
-    find:
+    filesystem:
       path: '/media/data/mythtv/videos/unrar/staging/movies/'
+      retrieve: files
     imdb_lookup: yes
     tmdb_lookup: yes
     # Rotten Tomatoes is broken, possibly forever :(
