--- a/flexget/series-ak.yml
+++ b/flexget/series-ak.yml
@@ -1,13 +1,57 @@
 series:
-  - Pretty Little Liars:
-      begin: S05E01
+  - America's Next Top Model
+  - Double Divas
+  - Fashion Police
+  - Gigolos
+  - Girlfriends' Guide to Divorce
+  - Girls
+  - Gypsy Sisters
+  - Ladies of London
+  - My 600-lb Life
+  - Odd Mom Out
+  - Preacher's Daughters
+  - Project Runway
+  - Project Runway All Stars
+  - Project Runway Junior
+  - RuPaul's Drag Race
+  - RuPaul's Drag Race All stars
+  - RuPaul's Drag Race Untucked!
+  - Tabatha Takes Over
+  - Tabatha's Salon Takeover
+  - Tabathas Salon Takeover
+  - The Jim Gaffigan Show
+  - The Real Housewives of Atlanta:
+      name_regexp: ^(The.)?Real.Housewives.of.Atlanta
+  - The Real Housewives of Beverly Hills:
+      name_regexp: ^(The.)?Real.Housewives.of.Beverly.Hills
+  - The Real Housewives of Melbourne:
+      name_regexp: ^(The.)?Real.Housewives.of.Melbourne
+  - The Real Housewives of Miami:
+      name_regexp: ^(The.)?Real.Housewives.of.Miami
+  - The Real Housewives of New Jersey:
+      name_regexp: ^(The.)?Real.Housewives.of.New.Jersey
+  - The Real Housewives of New York City:
+      name_regexp: ^(The.)?Real.Housewives.of.New.York.City
+  - The Real Housewives of Orange County:
+      name_regexp: ^(The.)?Real.Housewives.of.Orange.County
+  - The Real Housewives of Vancouver:
+      name_regexp: ^(The.)?Real.Housewives.of.Vancouver
+  - This is Life with Lisa Ling
+  - "You're the Worst":
+      name_regexp: ^you'?re.the.worst
       set:
-        tvdb_id: 146711
-        movedone: >
-          /raid/videos/AK Shows/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
-  - The Blacklist:
-      begin: S02E01
-      set:
-        tvdb_id: 266189
-        movedone: >
-          /raid/videos/AK Shows/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
+        tvdb_id: 281776
+
+# Example to put in location
+#  - Pretty Little Liars:
+#      begin: S05E01
+#      set:
+#        tvdb_id: 146711
+#        movedone: >
+#          /raid/videos/AK Shows/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
+#  - The Blacklist:
+#      begin: S02E01
+#      set:
+#        tvdb_id: 266189
+#        movedone: >
+#          /raid/videos/AK Shows/{{ tvdb_series_name|default(series_name)|replace('/', '_')|replace(':', ' -') }}/{% if series_id_type == 'ep' %}Season {{ series_season }}/{% endif %}
